syntax = "proto3";

package OpenTibiaUnity.Proto.Appearances;

enum HookType {
	South = 0;
	East = 1;
}

enum PlayerAction {
	None = 0;
	Look = 1;
	Use = 2;
	Open = 3;
	AutowalkHighlight = 4;
}

enum FrameGroupType {
	FrameGroupType_Idle = 0;
	FrameGroupType_Walking = 1;
}

message Appearances {
	repeated Appearance objects = 1;
	repeated Appearance outfits = 2;
	repeated Appearance effects = 3;
	repeated Appearance missles = 4;
}

message Appearance {
	uint32 id = 1;
	AppearanceFlags flags = 2;
	repeated FrameGroup frameGroups = 3;
}

message AppearanceFlags {
	Ground ground = 1;
	bool groundBorder = 2;
	bool bottom = 3;
	bool top = 4;
	bool container = 5;
	bool stackable = 6;
	bool forceUse = 7;
	bool multiUse = 8;
	Writable writable = 9;
	Writable writableOnce = 10;
	bool fluidContainer = 11;
	bool splash = 12;
	bool unpassable = 13;
	bool unmoveable = 14;
	bool unsight = 15;
	bool blockPath = 16;
	bool pickupable = 17;
	bool hangable = 18;
	Hook hook = 19;
	bool rotateable = 20;
	LightInfo light = 21;
	bool dontHide = 22;
	bool translucent = 23;
	Offset offset = 24;
	Elevation elevation = 25;
	bool lyingCorpse = 26;
	bool animateAlways = 27;
	MiniMap minimap = 28;
	LensHelp lensHelp = 29;
	bool fullGround = 30;
	bool Look = 31;
	Clothes cloth = 32;
	MarketInfo market = 33;
	DefaultAction defaultAction = 34;
	bool use = 35;
	bool wrapable = 36;
	bool unWrapable = 37;
	bool topEffect = 38;
	
	bool floorChange = 252;
	bool noMoveAnimation = 253;
	bool charges = 254;
}

message Ground {
	uint32 speed = 1;
}

message Writable {
	uint32 length = 1;
}

message Hook {
	HookType type = 1;
}

message LightInfo {
	uint32 intensity = 1;
	uint32 color = 2;
}

message MiniMap {
	uint32 color = 1;
}

message Offset {
	uint32 x = 1;
	uint32 y = 2;
}

message Elevation {
	uint32 elevation = 1;
}

message LensHelp {
	uint32 id = 1;
}

message Clothes {
	uint32 slot = 1;
}

message MarketInfo {
	uint32 category = 1;
	uint32 tradeAs = 2;
	uint32 showAs = 3;
	string name = 4;
	uint32 restrictVocation = 5;
	uint32 requiredLevel = 6;
}

message DefaultAction {
	PlayerAction action = 1;
}

message FrameGroup {
	FrameGroupType type = 1;
	uint32 width = 2;
	uint32 height = 3;
	uint32 exactSize = 4;
	uint32 layers = 5;
	uint32 patternWidth = 6;
	uint32 patternHeight = 7;
	uint32 patternDepth = 8;
	uint32 phases = 9;
	FrameAnimation frameAnimation = 10;
	repeated uint32 sprites = 11;
}

message FrameAnimation {
	bool async = 1;
	int32 loopCount = 2;
	int32 startPhase = 3;
	repeated FrameGroupDuration frameGroupDurations = 4;
}

message FrameGroupDuration {
	uint32 min = 1;
	uint32 max = 2;
}